// Copyright 2017 Istio Authors
//
//   Licensed under the Apache License, Version 2.0 (the "License");
//   you may not use this file except in compliance with the License.
//   You may obtain a copy of the License at
//
//       http://www.apache.org/licenses/LICENSE-2.0
//
//   Unless required by applicable law or agreed to in writing, software
//   distributed under the License is distributed on an "AS IS" BASIS,
//   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//   See the License for the specific language governing permissions and
//   limitations under the License.
syntax = "proto3";

package istio.broker.v1.config;

// ServicePlan defines the type of services available to Istio service consumers.
// One or more services are included in a plan. The plan is flexible and subject to change
// along with business requirements.
message ServicePlan {
  // Required. Public plan information.
  CatalogPlan plan = 1;

  // Required. List of the names of serviceclass that are included in the plan.
  // ServiceClass is a type of CRD resource.
  repeated string services = 2;
}

// CatalogPlan defines listing information for this service plan within the exposed catalog.
// The message is a subset of OSBI plan fields defined in https://github.com/openservicebrokerapi
message CatalogPlan {
  // Required. Public service plan name.
  string name = 1;

  // Required. Public unique service plan guid.
  string id = 2;

  // Required. Public short service plan description.
  string description = 3;
}

